multiple fixes + eslint cfg for front app

--- a/backend/mcp_config.json
+++ b/backend/mcp_config.json
@@ -2,15 +2,8 @@
   "mcpServers": {
     "filesystem": {
       "command": "npx",
-      "args": ["-y", "@modelcontextprotocol/server-filesystem", "./"],
+      "args": ["-y", "@modelcontextprotocol/server-filesystem", "./", "/Users/faroukbelhadj/Desktop", "/Users/faroukbelhadj"],
       "env": {}
-    },
-    "example-remote": {
-      "url": "http://localhost:8000/sse",
-      "headers": {
-        "Authorization": "Bearer key"
-      },
-      "disabled": true
     }
   }
 }
