--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,10 @@
     "main": "dist-electron/main.js",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build && electron-builder",
+        "build": "tsc && vite build",
         "preview": "vite preview",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "type-check": "tsc --noEmit"
     },
     "dependencies": {
         "@radix-ui/react-collapsible": "^1.1.12",
