--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,8 @@ start = "app.main:start"
 [tool.poetry.dependencies]
 python = ">=3.10,<3.14"
 fastapi = "^0.109.0"
+pillow = "^10.2.0"
+pytesseract = "^0.3.10"
 uvicorn = {extras = ["standard"], version = "^0.38.0"}
 pydantic = "^2.6.0"
 sqlmodel = "^0.0.27"
