--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
         "@xyflow/react": "^12.10.0",
         "axios": "^1.6.0",
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "get-port": "^7.0.0",
         "lucide-react": "^0.559.0",
         "react": "^18.2.0",
