--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -33,6 +33,8 @@ dspy = "^3.0.4"
 langchain-ollama = "^1.0.0"
 langchain-aws = "^1.1.0"
 langchain-mistralai = "^1.1.0"
+pypdf = "^6.4.2"
+pdf2image = "^1.17.0"
 
 
 
