--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.68.0",
         "react-markdown": "^10.1.0",
+        "react-resizable-panels": "^2.1.7",
         "react-router-dom": "^7.10.1",
         "react-syntax-highlighter": "^16.1.0",
         "remark-gfm": "^4.0.1",
