--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -38,6 +38,8 @@ pdf2image = "^1.17.0"
 aiofiles = "^25.1.0"
 pydantic-settings = "^2.12.0"
 structlog = "^25.5.0"
+langchain-chroma = "^1.1.0"
+chromadb = "^1.3.7"
 
 
 
