--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@radix-ui/react-collapsible": "^1.1.12",
         "@radix-ui/react-dialog": "^1.1.15",
+        "@radix-ui/react-popover": "^1.1.15",
         "@radix-ui/react-select": "^2.2.6",
         "@tailwindcss/postcss": "^4.1.17",
         "@types/react-syntax-highlighter": "^15.5.13",
